<resources>
    <string name="app_name">MoMoBooklet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shr_app_name">MoMoBooklet</string>
    <string name="shr_hint_username">username</string>
    <string name="shr_hint_password">password</string>
    <string name="shr_button_next">next</string>
    <string name="shr_button_cancel">Dialer</string>
    <string name="momobooklet">MOMOBOOKLET</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">register</string>
    <string name="sm_logo">SM logo</string>
    <string name="accountregistration">Account registration</string>
    <string name="hint_momo_name">MoMo Name</string>
    <string name="hint_momo_phone">MoMo Phone</string>
    <string name="email_address">*Email Address (optional)</string>
    <string name="submit">submit</string>
    <string name="viewpdfs">ViewPDFs</string>
    <string name="UserAccounts">Users</string>
    <string name="Transactions">TransActs</string>
    <string name="profile">Profile</string>
    <string name="transactiondata">TransactionData</string>
    <string name="convertdatatopdfs">convertDataToPdfs</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_pin">Customer PIN</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="amount">Amount</string>
    <string name="buy">Buys MOMO</string>
    <string name="sell">Sells MOMO</string>
    <string name="record">Record</string>
    <string name="accept">Accept</string>
    <string name="clear">clear</string>
    <string name="cancel_logo_description">Cancel logo</string>
    <string name="customer_signature">Customer Signature</string>
    <string name="userprofileimage">userprofileimage</string>
    <string name="mainman">IsInControl</string>
    <string name="give_control">Give Control</string>
    <string name="edit">Edit</string>
    <string name="useraccounts_title">User Accounts</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_to">Change To:</string>
    <string name="error_pin">must contain 13 characters</string>
    <string name="error_phone">must contain 8 characters</string>
    <string name="pin_check_hint">New PIN </string>
    <string name="phone_check_hint">New Phone Number</string>
    <string name="amount_check_hint">New Amount</string>
    <string name="transaction_type_check_hint"> BUY OR SELL</string>
    <string name="name_check_hint">New Name</string>
    <string name="sort_b_date">Sort By Date</string>
    <string name="sort_by_type">Sort By Type</string>
    <string name="sort_by_amount">Sort By Amount</string>
    <string name="sort_by_customername">Sort By CustomerName</string>
    <string name="search_transactions">search transactions…</string>
    <string name="transactions_as_is">Transactions</string>
    <string name="signature">Signature</string>
    <string name="transactiontype">BUY/SELL</string>
    <string name="customer_pin_as_is"> pin</string>
    <string name="customer_name_as_is">Name</string>
    <string name="date">Date</string>
    <string name="reload">reload</string>
    <string name="click_button_to_record_transactions">Click Button To Record Transactions</string>
    <string name="choose_file_type_to_manage">Choose File Type To Manage</string>
    <string name="click_button_toView_record_transactions">Click Button To View Recorded Transactions</string>
    <string name="add_account">Add Account</string>
    <string name="otp_prompt">A 6 digit pin has been sent to</string>
    <string name="momo_agent_name">MoMo Agent Name</string>
    <string name="permission_alert_dialog_title">SMS Permission</string>
    <string name="permission_dialog_message">Enable SMS Permission so we can \n autodetect incoming sms and
    improve your verification experience.</string>
    <string name="action_ok">OK</string>
    <string name="action_no_thanks">No Thanks</string>
    <string name="today_s_commission">Today\'s Commission</string>
    <string name="last_month_s_commission">Last Month\'s Commission</string>
    <string name="dd_mm_yy">dd-MM-yy</string>
    <string name="search_hint">Search Transactions</string>
    <string name="no_results">No results found \n showing ALL records </string>
    <string name="this_months_commission">This Month\'s Commission</string>
    <string name="yesterdays_commission">Yesterday\'s Commission</string>
    <string name="visual_clue_to_pull_up">visual clue to pull up</string>
    <string name="to"> \t to \to </string>
    <string name="makesboxappearasprompt">makesBoxAppearAsPrompt</string>
    <string name="number_of_transactions">Number of Transactions :</string>
    <string name="custom_day">Custom Day\'s Commission</string>
    <string name="generate_report_file">Generate Report File</string>
    <string name="show_all_reports">Show All Reports</string>
    <string name="show_filtered_reports">Show Filtered Reports</string>
    <string name="weekly_reports">Weekly Reports</string>
    <string name="biweekly_reports">BiWeekly Reports</string>
    <string name="monthly_reports">Monthly Reports</string>
    <string name="trimonthly_reports">TriMonthly Reports</string>
    <string name="annual_reports">Annual Reports</string>
    <string name="pdf_reports">PDF Reports</string>
    <string name="csv_reports">CSV Reports</string>
    <string name="file_storage">File Storage</string>
    <string name="_3_months_reports">3 Months Reports</string>
    <string name="_3_month_report">3 Month Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="biweekly_report">BiWeekly Report</string>
    <string name="both">BOTH</string>
    <string name="pdf">PDF</string>
    <string name="csv">CSV</string>
    <string name="create">CREATE</string>
    <string name="select_report_type_s">Select Report Type(s)</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="select_file_format">Select File Format</string>
    <string name="generate_report_files">Generate Report Files</string>
    <string name="pick_startdate">Pick StartDate</string>
    <string name="commission_ammount">Commission Amount</string>
    <string name="navigate_back_icon">navigate_back icon</string>
    <string name="share_report_button">share report button</string>
    <string name="delete_report_button">delete report button</string>
    <string name="report_type_figure">report Type Figure</string>
    <string name="report_title">Report Title</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pref_previously_started">previously started</string>
    <string name="polo_is_not_a_good">Polo Is Not A Good</string>
    <string name="request_manage_file_permission">This App Needs  The Permission To Manage Files.\nGrant  It To Create and Save Report(s)"
    </string>
    <string name="request_manage_file_permission_back_up">This App Needs  The Permission To Manage Files.\nGrant  It To Access Backup Files in Memory"
    </string>
    <string name="icon_to_familiarize_user_with_feature">icon to familiarize user with feature</string>
    <string name="help_page">Help Page</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="glad_to_have_you">We are glad you chose our app to manage your mobile money business. Our app is designed to be simple, fast and user-friendly.Whether you want to record transactions,view pre-recorded ones or keep up with your commission ,our app does it all.</string>
    <string name="how_to_use_our_app">How to use our app ?</string>
    <string name="quit_help">QUIT HELP</string>
    <string name="transactions">Transactions</string>
    <string name="record_transaction_help">You can record a transaction by filling out the form with the necessary transaction details ,
        hitting the submit button , then record customer\'s signature in the signature pad, confirm/edit transaction details in the following page and hit the record button to finish.</string>
    <string name="contact_us">Contact Us ( +268 ) 76911464</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="commission"> Commission</string>
    <string name="commmission_help">
        You can keep up to date with commission earned from  recorded transactions.
        The monthly commission is  calculated starting from the 3rd of each month
        to the the 2nd of the following month, you can override this start date
        and  choose one between  the 3rd  , 4th , 5th , 6th or 7th  of each month.\n
        The commission is calculated using the commission table  below , it  is subject to change
        when MTN releases a new one.
    </string>
    <string name="reports"> Reports</string>
    <string name="reports_help">
     You can generate reports on  recorded transaction data , the reports include  transaction details and summarised commission data for
        a selected period. Periods to choose from are WEEKLY, BIWEEKLY ( 2 WEEKS ),
        MONTHLY, TRIMONTHLY ( 3 MONTHS).\n Generated reports are stored in  your phone\'s  internal memory in a folder
        labeled MOMOBOOKLET.
    </string>
    <string name="accounts">UserAccounts</string>
    <string name="account_help">
        Transaction data is associated with a registered account  , if you wish
        to record transaction data  for a different account, simply register a new account and
        make sure it is active . an active account has a green circular icon next to it.
    </string>
    <string name="logo">logo</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="stars">************</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="FireBaseRegistrationError">Failed  Registration</string>
    <string name="FireBaseSignInError"> Log In  Failed </string>
    <string name="FireBaseConnectivityError">No Internet</string>
    <string name="FireBaseConnectivityErrorMessageBody">Registration process could not be  completed due to
    lack of internet connection.</string>
    <string name="restart">restart</string>
    <string name="retry">retry</string>
    <string name="edit_user_account">Edit User Account</string>
    <string name="title">Title</string>
    <string name="old_value">Old Value :</string>
    <string name="blank">-blank-</string>
    <string name="input_new_phone_number">input new phone number</string>
    <string name="update">update</string>
    <string name="control_status_explain">control status determines which account recorded transactions are associated with</string>
    <string name="input_new_name">input new name</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_control_status">Edit Control Status</string>
    <string name="application_back_up">Application Back Up And Recovery</string>
    <string name="recover_data">Recover Data</string>
    <string name="use_default_file">use default file</string>
    <string name="provide_custom_zip_file">provide custom zip file</string>
    <string name="server_zip_file">get files from server</string>
    <string name="back_up_data_now">Back up data locally</string>
    <string name="back_up_data_server">Back up data to server</string>
    <string name="back_up_data">Back up data</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="type">Type</string>
</resources>