<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="search"
        app:showAsAction="always" />
    <group
        android:checkableBehavior ="single">
        <item
            android:id="@+id/sort_date"
            android:title="@string/sort_b_date"
            />


        <item
            android:id="@+id/sort_type"
            android:title="@string/sort_by_type"
            />


        <item
            android:id="@+id/sort_amount"
            android:title="@string/sort_by_amount"
            />

        <item
            android:id="@+id/sort_name"
            android:title="@string/sort_by_customername"
            />

    </group>

</menu>